# Algorithms-and-Data-Structures-I

./: README.md  search algorithms.cpp  sort algorithms.cpp
2nd exam/: CMakeLists.txt  ej1.cpp  ej1mejor.cpp  ej3.cpp  ej4.cpp  ej4v2.cpp
2nd exam/ej2/: ej2.cpp  ej2.h
2nd exam/ej4/: ej4.h
2nd exam/ej4/Test/: ej4TEST.cpp
exercises 1/: README.md  division.cpp  fibonacci.cpp  isSorted.cpp  rotarvec.cpp  swap.cpp
exercises 1/exercises 3/: transpose.cpp  triangular.cpp
exercises 2/: mcd.cpp  min subseq.cpp  pico.cpp  sort.cpp
exercises 3/: README.md  rotarstr.cpp  subseq.cpp  transpose.cpp  triangular.cpp
gtests layout/same file/: CMakeLists.txt  ejercicios.cpp  ejercicios.h  main.cpp
gtests layout/same file/tests/: ejercicio1_test.cpp
gtests layout/separated files/: CMakeLists.txt
